prevent images from overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ main {
 
 img {
   border: 0;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 a {
